Refine logging system and api
