# core/logging/src/main/java/bisq/core/logging/api/LogConfig.java
@@ -1,9 +1,0 @@
-package bisq.core.logging.api;
-
-import io.micronaut.serde.annotation.Serdeable;
-
-import jakarta.validation.constraints.NotBlank;
-
-@Serdeable
-public record LogConfig(@NotBlank String name, @NotBlank String level) {
-}
